finished lab numpy

--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -16,11 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "import numpy as np\n"
    ]
   },
   {
@@ -34,11 +34,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.2.3\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "print(np.version.version)\n"
    ]
   },
   {
@@ -51,11 +59,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "a = np.random.rand(2,3,5)\n"
    ]
   },
   {
@@ -68,11 +76,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "a:\n",
+      "[[[0.60571655 0.56758587 0.16215694 0.05165878 0.9581245 ]\n",
+      "  [0.03308898 0.09812579 0.52496867 0.47925435 0.91026106]\n",
+      "  [0.19973755 0.68043439 0.20254275 0.72489806 0.37171133]]\n",
+      "\n",
+      " [[0.6048057  0.54244354 0.61450157 0.47360174 0.19561611]\n",
+      "  [0.75985882 0.07547208 0.82692792 0.39837969 0.06907573]\n",
+      "  [0.40016749 0.7452215  0.75099786 0.07135298 0.53115444]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "print(\"\\na:\")\n",
+    "print(a)\n"
    ]
   },
   {
@@ -85,11 +110,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "b = np.ones((5, 2, 3))\n"
    ]
   },
   {
@@ -102,11 +127,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 94,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "b:\n",
+      "[[[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "print(\"\\nb:\")\n",
+    "print(b)\n"
    ]
   },
   {
@@ -119,11 +168,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30 and 30 have same size\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "a_size = a.size\n",
+    "b_size = b.size\n",
+    "\n",
+    "if a_size == b_size:\n",
+    "  print(f\"{a_size} and {b_size} have same size\")\n",
+    "else:\n",
+    "    print(f\"{a_size} and {b_size} have different size\")"
    ]
   },
   {
@@ -136,11 +199,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "#No, because they have different shape.\n"
    ]
   },
   {
@@ -154,11 +217,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 120,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "c:\n",
+      "[[[1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]]]\n",
+      "(2, 3, 5)\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "b = np.ones((5, 2, 3))\n",
+    "c = b.transpose(1, 2, 0)\n",
+    "print(\"\\nc:\")\n",
+    "print(c)\n",
+    "c_shape = c.shape\n",
+    "print(c_shape)"
    ]
   },
   {
@@ -171,11 +256,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 121,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1.60571655 1.56758587 1.16215694 1.05165878 1.9581245 ]\n",
+      "  [1.03308898 1.09812579 1.52496867 1.47925435 1.91026106]\n",
+      "  [1.19973755 1.68043439 1.20254275 1.72489806 1.37171133]]\n",
+      "\n",
+      " [[1.6048057  1.54244354 1.61450157 1.47360174 1.19561611]\n",
+      "  [1.75985882 1.07547208 1.82692792 1.39837969 1.06907573]\n",
+      "  [1.40016749 1.7452215  1.75099786 1.07135298 1.53115444]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "d =(a +c)\n",
+    "print(d)\n",
+    "\n"
    ]
   },
   {
@@ -188,12 +289,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 122,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "a:\n",
+      "[[[0.60571655 0.56758587 0.16215694 0.05165878 0.9581245 ]\n",
+      "  [0.03308898 0.09812579 0.52496867 0.47925435 0.91026106]\n",
+      "  [0.19973755 0.68043439 0.20254275 0.72489806 0.37171133]]\n",
+      "\n",
+      " [[0.6048057  0.54244354 0.61450157 0.47360174 0.19561611]\n",
+      "  [0.75985882 0.07547208 0.82692792 0.39837969 0.06907573]\n",
+      "  [0.40016749 0.7452215  0.75099786 0.07135298 0.53115444]]]\n",
+      "\n",
+      "d:\n",
+      "[[[1.60571655 1.56758587 1.16215694 1.05165878 1.9581245 ]\n",
+      "  [1.03308898 1.09812579 1.52496867 1.47925435 1.91026106]\n",
+      "  [1.19973755 1.68043439 1.20254275 1.72489806 1.37171133]]\n",
+      "\n",
+      " [[1.6048057  1.54244354 1.61450157 1.47360174 1.19561611]\n",
+      "  [1.75985882 1.07547208 1.82692792 1.39837969 1.06907573]\n",
+      "  [1.40016749 1.7452215  1.75099786 1.07135298 1.53115444]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n",
-    "\n"
+    "print(\"\\na:\")\n",
+    "print(a)\n",
+    "print(\"\\nd:\")\n",
+    "print(d)\n",
+    " #c = ones array, the result is:\n",
+    "#Meaning every element in d is exactly 1 unit greater than the corresponding element in a.\n"
    ]
   },
   {
@@ -206,11 +336,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 123,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.60571655 0.56758587 0.16215694 0.05165878 0.9581245 ]\n",
+      "  [0.03308898 0.09812579 0.52496867 0.47925435 0.91026106]\n",
+      "  [0.19973755 0.68043439 0.20254275 0.72489806 0.37171133]]\n",
+      "\n",
+      " [[0.6048057  0.54244354 0.61450157 0.47360174 0.19561611]\n",
+      "  [0.75985882 0.07547208 0.82692792 0.39837969 0.06907573]\n",
+      "  [0.40016749 0.7452215  0.75099786 0.07135298 0.53115444]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "e = a * c\n",
+    "print(e)\n"
    ]
   },
   {
@@ -224,11 +369,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 124,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Does e equal a? True\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n",
+    "#yes, it is because: c = ones array\n",
+    "equal = np.array_equal(e, a)  \n",
+    "print(f\"Does e equal a? {equal}\")\n",
     "\n"
    ]
   },
@@ -243,12 +398,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 125,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d_max: 1.958124496773266, d_min: 1.0330889764058209, d_mean: 1.454328091280846\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n",
-    "\n"
+    "\n",
+    "d_max = np.max(d)    \n",
+    "d_min = np.min(d)   \n",
+    "d_mean = np.mean(d)  \n",
+    "\n",
+    "print(f\"d_max: {d_max}, d_min: {d_min}, d_mean: {d_mean}\")"
    ]
   },
   {
@@ -261,11 +428,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 126,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of f: (2, 3, 5)\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "f = np.empty(d.shape)\n",
+    "print(\"Shape of f:\", f.shape)\n",
+    "\n"
    ]
   },
   {
@@ -287,11 +464,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 142,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Corrected f:\n",
+      "[[[ 75.  75.  25.  25. 100.]\n",
+      "  [  0.  25.  75.  75.  75.]\n",
+      "  [ 25.  75.  25.  75.  25.]]\n",
+      "\n",
+      " [[ 75.  75.  75.  75.  25.]\n",
+      "  [ 75.  25.  75.  25.  25.]\n",
+      "  [ 25.  75.  75.  25.  75.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "f = np.empty(d.shape)\n",
+    "\n",
+    "\n",
+    "f[d == d_min] = 0\n",
+    "f[d == d_max] = 100\n",
+    "f[(d > d_min) & (d < d_mean)] = 25\n",
+    "f[d == d_mean] = 50\n",
+    "f[(d > d_mean) & (d < d_max)] = 75\n",
+    "\n",
+    "print(\"Corrected f:\")\n",
+    "print(f)"
    ]
   },
   {
@@ -325,11 +527,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 140,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "d:\n",
+      "[[[1.60571655 1.56758587 1.16215694 1.05165878 1.9581245 ]\n",
+      "  [1.03308898 1.09812579 1.52496867 1.47925435 1.91026106]\n",
+      "  [1.19973755 1.68043439 1.20254275 1.72489806 1.37171133]]\n",
+      "\n",
+      " [[1.6048057  1.54244354 1.61450157 1.47360174 1.19561611]\n",
+      "  [1.75985882 1.07547208 1.82692792 1.39837969 1.06907573]\n",
+      "  [1.40016749 1.7452215  1.75099786 1.07135298 1.53115444]]]\n",
+      "\n",
+      "f:\n",
+      "[[[ 75.  75.  25.  25. 100.]\n",
+      "  [  0.  25.  75.  75.  75.]\n",
+      "  [ 25.  75.  25.  75.  25.]]\n",
+      "\n",
+      " [[ 75.  75.  75.  75.  25.]\n",
+      "  [ 75.  25.  75.  25.  25.]\n",
+      "  [ 25.  75.  75.  25.  75.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "print(\"\\nd:\")\n",
+    "print(d)\n",
+    "print(\"\\nf:\")\n",
+    "print(f)\n"
    ]
   },
   {
@@ -350,11 +580,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 144,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "String-labeled array f:\n",
+      "[[['D' 'D' 'B' 'B' 'E']\n",
+      "  ['A' 'B' 'D' 'D' 'D']\n",
+      "  ['B' 'D' 'B' 'D' 'B']]\n",
+      "\n",
+      " [['D' 'D' 'D' 'D' 'B']\n",
+      "  ['D' 'B' 'D' 'B' 'B']\n",
+      "  ['B' 'D' 'D' 'B' 'D']]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]"
+    "f = np.empty(d.shape, dtype=object)  \n",
+    "\n",
+    "f[d == d_min] = 'A'\n",
+    "f[d == d_max] = 'E'\n",
+    "f[(d > d_min) & (d < d_mean)] = 'B'\n",
+    "f[d == d_mean] = 'C'\n",
+    "f[(d > d_mean) & (d < d_max)] = 'D'\n",
+    "\n",
+    "\n",
+    "print(\"String-labeled array f:\")\n",
+    "print(f)"
    ]
   }
  ],
@@ -374,7 +629,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
