--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -41,7 +41,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "numpy verisopn: 2.2.3\n",
+      "numpy verison: 2.2.3\n",
       "{\n",
       "  \"Compilers\": {\n",
       "    \"c\": {\n",
@@ -139,7 +139,7 @@
     }
    ],
    "source": [
-    "print(\"numpy verisopn:\", np.__version__)\n",
+    "print(\"numpy verison:\", np.__version__)\n",
     "np.show_config()"
    ]
   },
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,20 +170,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[0.97901782 0.94441709 0.35188322 0.07353255 0.04386022]\n",
-      "  [0.9158778  0.45563806 0.03783118 0.87739392 0.89482554]\n",
-      "  [0.71482935 0.08430902 0.27480399 0.19143848 0.82216133]]\n",
+      "[[[0.16173591 0.03737299 0.91235002 0.16265448 0.91905932]\n",
+      "  [0.27349784 0.00553347 0.23532739 0.48006478 0.77489887]\n",
+      "  [0.32462704 0.31002902 0.70771584 0.61280649 0.04219424]]\n",
       "\n",
-      " [[0.79679816 0.70116496 0.40817567 0.94452684 0.40806582]\n",
-      "  [0.50907947 0.22880744 0.53248259 0.54468359 0.17117991]\n",
-      "  [0.18772744 0.25974109 0.49564376 0.32598226 0.34723456]]]\n"
+      " [[0.43425878 0.45269097 0.50104704 0.7388026  0.32855965]\n",
+      "  [0.9882214  0.37139443 0.87392476 0.80188663 0.95761069]\n",
+      "  [0.61434116 0.42076881 0.65591944 0.95719671 0.74914967]]]\n"
      ]
     }
    ],
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -256,14 +256,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Is a have the same size to b? False\n"
+      "Is a have the same size to b? True\n"
      ]
     }
    ],
@@ -283,14 +283,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a and b are able to add\n"
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (2,3,5) (5,2,3) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[10], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m----> 2\u001b[0m     add \u001b[38;5;241m=\u001b[39m \u001b[43ma\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mb\u001b[49m\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124ma and b are able to add\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n",
+      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (2,3,5) (5,2,3) "
      ]
     }
    ],
