--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -16,11 +16,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: numpy in c:\\users\\watee\\downloads\\python\\lib\\site-packages (1.26.4)\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "!pip install numpy\n"
    ]
   },
   {
@@ -34,11 +42,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "\n",
+    "import numpy as np"
    ]
   },
   {
@@ -51,11 +60,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "\n",
+    "a = np.random.randint(4, size=(2,3,5))"
    ]
   },
   {
@@ -68,11 +78,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0 3 1 2 2]\n",
+      "  [2 1 3 1 3]\n",
+      "  [2 3 2 2 3]]\n",
+      "\n",
+      " [[0 3 0 0 0]\n",
+      "  [3 2 0 0 3]\n",
+      "  [1 2 1 0 0]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "print(a)\n"
    ]
   },
   {
@@ -85,11 +109,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "b= np.ones((5, 2, 3))\n"
    ]
   },
   {
@@ -102,11 +126,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "print(b)\n"
    ]
   },
   {
@@ -119,11 +164,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30 30\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "print(a.size, b.size)\n",
+    "a.size == b.size"
    ]
   },
   {
@@ -136,11 +200,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 3, 5)\n",
+      "(5, 2, 3)\n",
+      "you cannot add a different shape of array together\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "print(a.shape )\n",
+    "print(b.shape)\n",
+    "a.shape == b.shape\n",
+    "print(\"you cannot add a different shape of array together\")"
    ]
   },
   {
@@ -154,11 +231,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "c= np.reshape(b, (2, 3, 5))"
    ]
   },
   {
@@ -171,11 +248,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "d= a + c"
    ]
   },
   {
@@ -188,12 +265,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 2. 4. 3. 3.]\n",
+      "  [4. 2. 4. 3. 3.]\n",
+      "  [4. 3. 1. 3. 4.]]\n",
+      "\n",
+      " [[4. 2. 2. 4. 2.]\n",
+      "  [2. 3. 3. 2. 1.]\n",
+      "  [2. 4. 2. 3. 2.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n",
-    "\n"
+    "print(d)\n"
    ]
   },
   {
@@ -206,11 +296,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0. 1. 3. 2. 2.]\n",
+      "  [3. 1. 3. 2. 2.]\n",
+      "  [3. 2. 0. 2. 3.]]\n",
+      "\n",
+      " [[3. 1. 1. 3. 1.]\n",
+      "  [1. 2. 2. 1. 0.]\n",
+      "  [1. 3. 1. 2. 1.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "e= a * c\n",
+    "print(e)\n"
    ]
   },
   {
@@ -224,11 +329,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ True,  True,  True,  True,  True],\n",
+       "        [ True,  True,  True,  True,  True],\n",
+       "        [ True,  True,  True,  True,  True]],\n",
+       "\n",
+       "       [[ True,  True,  True,  True,  True],\n",
+       "        [ True,  True,  True,  True,  True],\n",
+       "        [ True,  True,  True,  True,  True]]])"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n",
+    "e == a \n",
     "\n"
    ]
   },
@@ -243,11 +365,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d max: 4.0\n",
+      "d min: 1.0\n",
+      "d mean: 2.7333333333333334\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n",
+    "d_max = np.max(d)\n",
+    "d_min= np.min(d)\n",
+    "d_mean= np.mean(d)\n",
+    "print('d max:', d_max)\n",
+    "print('d min:', d_min)\n",
+    "print('d mean:', d_mean)\n",
     "\n"
    ]
   },
@@ -261,11 +398,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "f= np.empty_like(d)"
    ]
   },
   {
@@ -287,11 +424,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "f= np.where((d > d_min) & (d < d_mean), 25, f)\n",
+    "f= np.where((d > d_mean) & (d < d_max), 75, f)\n",
+    "f= np.where((d == d_mean), 50, f)\n",
+    "f= np.where((d == d_min), 0, f)\n",
+    "f= np.where((d == d_max), 100, f)\n"
    ]
   },
   {
@@ -325,11 +466,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 2. 4. 3. 3.]\n",
+      "  [4. 2. 4. 3. 3.]\n",
+      "  [4. 3. 1. 3. 4.]]\n",
+      "\n",
+      " [[4. 2. 2. 4. 2.]\n",
+      "  [2. 3. 3. 2. 1.]\n",
+      "  [2. 4. 2. 3. 2.]]]\n",
+      "[[[  0.  25. 100.  75.  75.]\n",
+      "  [100.  25. 100.  75.  75.]\n",
+      "  [100.  75.   0.  75. 100.]]\n",
+      "\n",
+      " [[100.  25.  25. 100.  25.]\n",
+      "  [ 25.  75.  75.  25.   0.]\n",
+      "  [ 25. 100.  25.  75.  25.]]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(None, None)"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "print(d) , print(f)"
    ]
   },
   {
@@ -374,7 +546,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
