--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -16,11 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "import numpy as np\n",
+    "\n"
    ]
   },
   {
@@ -34,11 +35,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.26.4\n",
+      "<function show at 0x0000019A58F47380>\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "print(np.__version__)\n",
+    "print(np.show_config)"
    ]
   },
   {
@@ -51,11 +62,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "a= np.random.randint(3, size=(2, 3, 5))\n",
+    "\n"
    ]
   },
   {
@@ -68,11 +80,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[2 2 0 2 2]\n",
+      "  [1 0 2 2 2]\n",
+      "  [1 1 2 0 1]]\n",
+      "\n",
+      " [[0 0 0 0 2]\n",
+      "  [0 2 2 2 0]\n",
+      "  [0 2 0 1 0]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "print(a)\n"
    ]
   },
   {
@@ -85,11 +111,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "b=np.ones((5, 2 ,3))\n"
    ]
   },
   {
@@ -102,11 +128,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "print(b)\n"
    ]
   },
   {
@@ -119,11 +166,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n",
+      "30\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "print(a.size)\n",
+    "print(b.size)\n"
    ]
   },
   {
@@ -136,11 +193,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "#no they have different number of dimensions and the shape of each \n",
+    "# dimension are different.\n"
    ]
   },
   {
@@ -154,11 +212,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "#a   2x3x5\n",
+    "#b = 5x2x3\n",
+    "\n",
+    "c=b.transpose((1, 2, 0))\n",
+    "\n",
+    "print(c)\n"
    ]
   },
   {
@@ -171,11 +248,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[3. 3. 1. 3. 3.]\n",
+      "  [2. 1. 3. 3. 3.]\n",
+      "  [2. 2. 3. 1. 2.]]\n",
+      "\n",
+      " [[1. 1. 1. 1. 3.]\n",
+      "  [1. 3. 3. 3. 1.]\n",
+      "  [1. 3. 1. 2. 1.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "d=c+ a\n",
+    "print(d)\n"
    ]
   },
   {
@@ -188,12 +280,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[2 2 0 2 2]\n",
+      "  [1 0 2 2 2]\n",
+      "  [1 1 2 0 1]]\n",
+      "\n",
+      " [[0 0 0 0 2]\n",
+      "  [0 2 2 2 0]\n",
+      "  [0 2 0 1 0]]]\n",
+      "[[[3. 3. 1. 3. 3.]\n",
+      "  [2. 1. 3. 3. 3.]\n",
+      "  [2. 2. 3. 1. 2.]]\n",
+      "\n",
+      " [[1. 1. 1. 1. 3.]\n",
+      "  [1. 3. 3. 3. 1.]\n",
+      "  [1. 3. 1. 2. 1.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n",
-    "\n"
+    "print(a)\n",
+    "print(d)"
    ]
   },
   {
@@ -206,11 +319,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[2. 2. 0. 2. 2.]\n",
+      "  [1. 0. 2. 2. 2.]\n",
+      "  [1. 1. 2. 0. 1.]]\n",
+      "\n",
+      " [[0. 0. 0. 0. 2.]\n",
+      "  [0. 2. 2. 2. 0.]\n",
+      "  [0. 2. 0. 1. 0.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "e=a*c\n",
+    "print(e)"
    ]
   },
   {
@@ -224,11 +352,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[2 2 0 2 2]\n",
+      "  [1 0 2 2 2]\n",
+      "  [1 1 2 0 1]]\n",
+      "\n",
+      " [[0 0 0 0 2]\n",
+      "  [0 2 2 2 0]\n",
+      "  [0 2 0 1 0]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n",
+    "print(a)\n",
     "\n"
    ]
   },
@@ -243,12 +385,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0\n",
+      "1.0\n",
+      "2.033333333333333\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n",
-    "\n"
+    "d_max=d.max()\n",
+    "d_min=d.min()\n",
+    "d_mean=d.mean()\n",
+    "print(d_max)\n",
+    "print(d_min)\n",
+    "print(d_mean)"
    ]
   },
   {
@@ -261,11 +417,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[None None None None None]\n",
+      "  [None None None None None]\n",
+      "  [None None None None None]]\n",
+      "\n",
+      " [[None None None None None]\n",
+      "  [None None None None None]\n",
+      "  [None None None None None]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "f = np.empty((2, 3, 5))\n",
+    "print(f)\n"
    ]
   },
   {
@@ -287,11 +458,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "f[(d > d_min) & (d < d_mean)] = 25 # in \n",
+    "f[(d > d_mean) & (d < d_max)] = 75\n",
+    "f[d==d_mean]= 50\n",
+    "f[d == d_min] = 0\n",
+    "f[d == d_max] = 100"
    ]
   },
   {
@@ -325,11 +500,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[2. 2. 2. 2. 1.]\n",
+      "  [2. 1. 1. 1. 3.]\n",
+      "  [2. 1. 2. 2. 2.]]\n",
+      "\n",
+      " [[1. 1. 2. 1. 3.]\n",
+      "  [2. 2. 1. 2. 2.]\n",
+      "  [2. 1. 3. 1. 1.]]]\n",
+      "[[[1. 1. 1. 1. 0.]\n",
+      "  [1. 0. 0. 0. 2.]\n",
+      "  [1. 0. 1. 1. 1.]]\n",
+      "\n",
+      " [[0. 0. 1. 0. 2.]\n",
+      "  [1. 1. 0. 1. 1.]\n",
+      "  [1. 0. 2. 0. 0.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "print(d)\n",
+    "print(f)\n"
    ]
   },
   {
@@ -352,15 +549,35 @@
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[['E' 'E' 'A' 'E' 'E']\n",
+      "  ['B' 'A' 'E' 'E' 'E']\n",
+      "  ['B' 'B' 'E' 'A' 'B']]\n",
+      "\n",
+      " [['A' 'A' 'A' 'A' 'E']\n",
+      "  ['A' 'E' 'E' 'E' 'A']\n",
+      "  ['A' 'E' 'A' 'B' 'A']]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]"
+    "f = np.empty((2, 3, 5), dtype=object)\n",
+    "f[(d > d_min) & (d < d_mean)] = 'B'\n",
+    "f[(d > d_mean) & (d < d_max)] = 'D'\n",
+    "f[d==d_mean]= 'C'\n",
+    "f[d == d_min] = 'A'\n",
+    "f[d == d_max] = 'E'\n",
+    "print(f)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -374,7 +591,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
